# LLAMA_INDEX_LEARNING

./: README.md  pyproject.toml  requirements.txt
data/: my_notes.txt
pakistan_chatbot_with_memory/: app.py  chat_engine.py  custom_prompt.py
pdf_txt_file/: app.py  main.py  notion.py
research-rag-ui/: app.py
research-rag-ui/utils/: rag_engine.py
